fixes z-index

--- a/src/components/nav_elements/nav-bars.css
+++ b/src/components/nav_elements/nav-bars.css
@@ -6,7 +6,7 @@
   background-color: var(--secondary);
   width: 100vw;
   top: 0;
-  z-index: 3;
+  z-index: 20;
   box-shadow: 0 1px 10px 0 rgb(0, 0, 0, 0.2);
   padding: .25rem .5rem;
   margin-bottom: 2em;
